--- a/app/views/dashboard/order_items/new.html.haml
+++ b/app/views/dashboard/order_items/new.html.haml
@@ -1,14 +1,22 @@
 - title t('dashboard.orders.track_time_and_expenses')
 
-.panel
-  .panel-body
-    %h3=  t('dashboard.orders.track_time_and_expenses')
-    = link_to t('dashboard.order_items.back_to_projects'), dashboard_company_transactable_type_transactables_path(@order.transactable.transactable_type, status: 'in progress')
-    .orders-a
-      = dashboard_simple_form_for @order_item, url: dashboard_order_order_items_path(@order) do |f|
+- content_for :page_header do
+  %h1= t('dashboard.orders.track_time_and_expenses_html')
+
+  .options
+    = link_to t('dashboard.order_items.back_to_projects_html'), dashboard_company_transactable_type_transactables_path(@order.transactable.transactable_type, status: 'in progress')
+
+= dashboard_simple_form_for @order_item, url: dashboard_order_order_items_path(@order) do |f|
+  .panel
+    .panel-body
+      .time-tracking-a
         = render 'form', f: f
-        .panel.form-actions
-          .panel-body
-            = f.submit t('dashboard.host_reservations.complete_reservation.submit'), class: 'btn-lg btn-primary'
-      - if @order.recurring_booking_periods.any?(&:persisted?)
+
+  .panel.form-actions
+    .panel-body
+      = f.submit t('dashboard.host_reservations.complete_reservation.submit'), class: 'btn-lg btn-primary'
+
+  - if @order.recurring_booking_periods.any?(&:persisted?)
+    .panel
+      .panel-body
         = render partial: 'show', order: @order
