--- a/app/views/dashboard/order_items/_form.html.haml
+++ b/app/views/dashboard/order_items/_form.html.haml
@@ -1,32 +1,26 @@
 - readonly ||= false
-.panel{'data-order-items' => true }
-  .panel-body
-    = render 'project_info', transactable: @order.transactable.to_liquid
-    .transactable-line-items.nested-fields-set
-      = f.simple_fields_for :transactable_line_items do |transactable_line_item_form|
-        = render 'transactable_line_item', f: transactable_line_item_form, readonly: readonly
-      - if readonly == false
-        .add-link
-          = link_to_add_association t('dashboard.host_reservations.complete_reservation.add_new_period') , f, :transactable_line_items, partial: 'transactable_line_item', id: "add_new_transactable_line_item", class: 'btn btn-primary'
-    %hr
+%div{'data-order-items' => true }
+  = render 'project_info', transactable: @order.transactable.to_liquid
 
-    .row-fluid.total
-      - if @order_item.errors[:total_cost].present?
-        .col-xs-6.col-sm-2.col-sm-offset-8.text-right.has-error
-          .help-block= t('dashboard.host_reservations.complete_reservation.total_cost')
-        .col-xs-6.col-sm-2.has-error
-          .amount.help-block{ data: { currency: @order_item.unit_price.symbol } }
-            = @order_item.total_cost
-          %small.help-block= @order_item.errors[:total_cost].join(', ')
-      - else
-        .col-xs-6.col-sm-2.col-sm-offset-8.text-right
-          = t('dashboard.host_reservations.complete_reservation.total_cost')
-        .col-xs-6.col-sm-2
-          .amount{ data: { currency: @order_item.unit_price.symbol } }
-            = humanized_money_with_cents_and_symbol(@order_item.unit_price)
+  .transactable-line-items.nested-fields-set
+    = f.simple_fields_for :transactable_line_items do |transactable_line_item_form|
+      = render 'transactable_line_item', f: transactable_line_item_form, readonly: readonly
+    - if readonly == false
+      .add-link
+        = link_to_add_association t('dashboard.host_reservations.complete_reservation.add_new_period') , f, :transactable_line_items, partial: 'transactable_line_item', id: "add_new_transactable_line_item", class: 'btn btn-primary'
 
-    %hr
+  .total
+    - if @order_item.errors[:total_cost].present?
+      .has-error
+        %span.total-cost-label= t('dashboard.host_reservations.complete_reservation.total_cost')
+        %span.amount{ data: { currency: @order_item.unit_price.symbol } }
+          = @order_item.total_cost
+        %small.help-block= @order_item.errors[:total_cost].join(', ')
+    - else
+      %span.total-cost-label= t('dashboard.host_reservations.complete_reservation.total_cost')
+      %span.amount{ data: { currency: @order_item.unit_price.symbol } }
+        = humanized_money_with_cents_and_symbol(@order_item.unit_price)
 
-    = f.input :comment, as: :text, label: t('dashboard.host_reservations.complete_reservation.comment'), input_html: { readonly: readonly }
+  = f.input :comment, as: :text, label: t('dashboard.host_reservations.complete_reservation.comment'), input_html: { readonly: readonly }
 
 
