--- a/app/views/dashboard/order_items/_show.html.liquid
+++ b/app/views/dashboard/order_items/_show.html.liquid
@@ -1,23 +1,26 @@
-<div class="row">
-  <div class="col-sm-5">History for <a href="{{ transactable.show_path }}">{{ order.transactable.name }}</a></div>
+<h3>History for <a href="{{ transactable.show_path }}">{{ order.transactable.name }}</a></h3>
 
-  <div class="col-sm-5">Next Payment Cycle Scheduled For: {{ order.user.default_company.merchant_accounts[0].next_transfer_date | l: 'short' }}</div>
-</div>
-<hr/>
+<div class="alert alert-info">Next Payment Cycle Scheduled For: <b>{{ order.user.default_company.merchant_accounts[0].next_transfer_date | l: 'short' }}</b></div>
 
-{% for item in order.recurring_booking_periods %}
-  {% unless item.persisted? %}
-    {% continue %}
-  {% endunless %}
-  {% include 'dashboard/order_items/order_item' %}
-{% endfor %}
-<hr/>
-<hr/>
-<div class="row">
-  <div class="col-sm-3">Grand Total: {{ order.formatted_total_amount }}</div>
-</div>
+<div class="time-tracking-a">
+  {% for item in order.recurring_booking_periods %}
+    {% unless item.persisted? %}
+      {% continue %}
+    {% endunless %}
+    {% include 'dashboard/order_items/order_item' %}
+  {% endfor %}
 
-<div class="row">
-  <div class="col-sm-6">Total Paid: {{ order.formatted_total_paid_amount }}</div>
-  <div class="col-sm-6">Total Unpaid: {{ order.formatted_total_unpaid_amount }}</div>
+  <div class="totals-summary">
+    <h4>Summary</h4>
+    <dl>
+      <dt class="grand-total-label">Grand total:</dt>
+      <dd class="grand-total-amount">{{ order.formatted_total_amount }}</dd>
+
+      <dt class="total-paid-label">Total Paid:</dt>
+      <dd class="total-paid-amount">{{ order.formatted_total_paid_amount }}</dd>
+
+      <dt class="total-unpaid-label">Total Unpaid:</dt>
+      <dd class="total-unpaid-amount">{{ order.formatted_total_unpaid_amount }}</dd>
+    </dl>
+  </div>
 </div>
