--- a/app/views/dashboard/order_items/index.html.liquid
+++ b/app/views/dashboard/order_items/index.html.liquid
@@ -6,25 +6,28 @@
     <span class='hidden-xs'>My Projects &gt;</span>
     {{ 'dashboard.orders.track_time_and_expenses' | t }}
   </h1>
-  Select Project:
-  <select data-expenses-overview>
-    {% for transactable in transactables %}
-      <option value="{{ transactable.id }}" {% if transactable.id == for_transactable.id %}selected{% endif %}>{{ transactable.name }}</option>
-    {% endfor %}
-  </select>
   {% if for_transactable != blank %}
-    <br/>
-    <a href="{{ 'dashboard_company_transactable_type_transactables_path' | generate_url: for_transactable.transactable_type_id, status: 'in progress' }}">{{ 'dashboard.order_items.back_to_projects' | t }}</a>
+    <div class="options">
+      <a href="{{ 'dashboard_company_transactable_type_transactables_path' | generate_url: for_transactable.transactable_type_id, status: 'in progress' }}">{{ 'dashboard.order_items.back_to_projects_html' | t }}</a>
+    </div>
   {% endif %}
 {% endcontent_for %}
 
-  {% for transactable in transactables %}
-  <div class="panel" id="transactable_{{transactable.id}}" style="display: none">
-    <div class="panel-body">
-      <h3>{{ 'dashboard.orders.track_time_and_expenses' | t }}</h3>
-      <div class="orders-a">
-        {% include 'dashboard/order_items/show', order: transactable.confirmed_order %}
-      </div>
-    </div>
+<div class="sort-filter-a">
+  <div class="form-group">
+    <label for="select-project" class="control-label">Select Project:</label>
+    <select id="select-project" data-expenses-overview>
+      {% for transactable in transactables %}
+        <option value="{{ transactable.id }}" {% if transactable.id == for_transactable.id %}selected{% endif %}>{{ transactable.name }}</option>
+      {% endfor %}
+    </select>
   </div>
-  {% endfor %}
+</div>
+
+{% for transactable in transactables %}
+<div class="panel" id="transactable_{{transactable.id}}" style="display: none">
+  <div class="panel-body">
+    {% include 'dashboard/order_items/show', order: transactable.confirmed_order %}
+  </div>
+</div>
+{% endfor %}
