--- a/lib/tasks/uot/templates/dashboard_company_analytics_show.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_analytics_show.liquid
@@ -21,30 +21,32 @@
         <canvas id="chart"></canvas>
       </figure>
 
-      <table class="table.table-simple">
-        <thead>
-          <tr>
-            <th>{{ 'dashboard.analytics.columns.amount') | t }}</th>
-            <th>Project</th>
-            <th>{{ 'dashboard.analytics.columns.date' | t }}</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for payment in payments %}
+      <div class="table-responsive">
+        <table class="table.table-simple">
+          <thead>
             <tr>
-              <td>{{ payment.currency | currency_content_tag:  payment.total_amount, 'span' }}</td>
-              <td>{{ payment.payable.listing.name }}</td>
-              <td>{{ payment.created_at | l: 'short' }}</td>
+              <th>{{ 'dashboard.analytics.columns.amount') | t }}</th>
+              <th>Project</th>
+              <th>{{ 'dashboard.analytics.columns.date' | t }}</th>
             </tr>
-          {% endfor %}
-          {% for total in all_time_totals %}
-            <tr class="total-row">
-              <td>{{ total.currency | currency_content_tag: total.sum, 'span' }}</td>
-              <td>{{ 'dashboard.analytics.total.all_time' }}</td>
-              <td></td>
-            </tr>
-          {% endfor %}
-      </table>
+          </thead>
+          <tbody>
+            {% for payment in payments %}
+              <tr>
+                <td>{{ payment.currency | currency_content_tag:  payment.total_amount, 'span' }}</td>
+                <td>{{ payment.payable.listing.name }}</td>
+                <td>{{ payment.created_at | l: 'short' }}</td>
+              </tr>
+            {% endfor %}
+            {% for total in all_time_totals %}
+              <tr class="total-row">
+                <td>{{ total.currency | currency_content_tag: total.sum, 'span' }}</td>
+                <td>{{ 'dashboard.analytics.total.all_time' }}</td>
+                <td></td>
+              </tr>
+            {% endfor %}
+        </table>
+      </div>
     {% endif %}
 
   </div>
