--- a/lib/tasks/uot/templates/dashboard_company_transactables_client_listing.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_client_listing.liquid
@@ -12,7 +12,7 @@
     </h2>
 
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-8">
         <dl class="properties">
           <dt>Workplace</dt>
           <dd>{{ transactable.properties.workplace_type }}</dd>
@@ -35,7 +35,7 @@
         <h4>Description</h4>
         <p>{{ transactable.description }}</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         {% include 'dashboard/company/transactables/client_actions.html' %}
       </div>
     </div>
@@ -44,89 +44,95 @@
       {% assign transactable_collaborators = transactable.approved_transactable_collaborators %}
       {% if transactable_collaborators != empty %}
         <h3>SMEs Invited ({{ transactable_collaborators.size }})</h3>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>SMEs:</th>
-              <th>Invite Date:</th>
-              <th>Invite Action:</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for transactable_collaborator in transactable_collaborators %}
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
               <tr>
-                <td>{{ transactable_collaborator.user.name }}</td>
-                <td>{{ transactable_collaborator.approved_by_owner_at | to_date | l: 'short' }}</td>
-                <td>
-                  {% if transactable.user_messages.size > 0 %}
-                    <a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: transactable.user_messages.first.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a>
-                  {% else %}
-                    <a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a>
-                  {% endif %}
-
-                  {{ transactable_collaborator.user.click_to_call_button }}
-
-                  <a class="btn btn-danger" href="{{ transactable_collaborator.destroy_path }}" data-method="delete" data-confirm="Are you sure?">Remove invite</a>
-
-                </td>
+                <th>SMEs:</th>
+                <th>Invite Date:</th>
+                <th>Invite Action:</th>
               </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              {% for transactable_collaborator in transactable_collaborators %}
+                <tr>
+                  <td>{{ transactable_collaborator.user.name }}</td>
+                  <td>{{ transactable_collaborator.approved_by_owner_at | to_date | l: 'short' }}</td>
+                  <td>
+                    {% if transactable.user_messages.size > 0 %}
+                      <a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: transactable.user_messages.first.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a>
+                    {% else %}
+                      <a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a>
+                    {% endif %}
+
+                    {{ transactable_collaborator.user.click_to_call_button }}
+
+                    <a class="btn btn-danger" href="{{ transactable_collaborator.destroy_path }}" data-method="delete" data-confirm="Are you sure?">Remove invite</a>
+
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
       {% endif %}
 
       {% assign orders = transactable.orders %}
       {% if orders != empty %}
         <h3>Offers ({{ orders.size }})</h3>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>SMEs:</th>
-              <th>Offer Date:</th>
-              <th>Offer Status:</th>
-              <th>Offer Action:</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for order in orders %}
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
               <tr>
-                <td>{{ order.user.name }}</td>
-                <td>{{ order.created_at | to_date | l: 'short' }}</td>
-                <td>{{ 'reservations.states.' | append: order.state | t }}</td>
-                <td>
-                  {% if order.unconfirmed? %}
-                    <a href="{{ order.payment_documents[0].file_url }}" target="_blank" class="btn btn-info">Review</a>
-                    <a href="{{ order.rejection_form_path }}" data-modal="true" class="btn btn-danger">Reject</a>
-                    <a href="{{ order.confirmation_form_path }}" class="btn btn-success" data-modal="true">Accept</a>
-                  {% endif %}
-                </td>
+                <th>SMEs:</th>
+                <th>Offer Date:</th>
+                <th>Offer Status:</th>
+                <th>Offer Action:</th>
               </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              {% for order in orders %}
+                <tr>
+                  <td>{{ order.user.name }}</td>
+                  <td>{{ order.created_at | to_date | l: 'short' }}</td>
+                  <td>{{ 'reservations.states.' | append: order.state | t }}</td>
+                  <td>
+                    {% if order.unconfirmed? %}
+                      <a href="{{ order.payment_documents[0].file_url }}" target="_blank" class="btn btn-info">Review</a>
+                      <a href="{{ order.rejection_form_path }}" data-modal="true" class="btn btn-danger">Reject</a>
+                      <a href="{{ order.confirmation_form_path }}" class="btn btn-success" data-modal="true">Accept</a>
+                    {% endif %}
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
       {% endif %}
 
 
     {% elsif current_status == "in progress" or current_status == "archived" %}
       <h3>Offer</h3>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Offer Made</th>
-            <th>Offer Status</th>
-            <th>Date</th>
-            <th>View Offer</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>{{ accepted_order.created_at | to_date | l: 'short' }}</td>
-            <td>Accepted</td>
-            <td>{{ accepted_order.confirmed_at | to_date | l: 'short' }}</td>
-            <td><a href="{{ accepted_order.payment_documents[0].file_url }}" target="_blank">{{ accepted_order.payment_documents[0].file_name }}</a></td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Offer Made</th>
+              <th>Offer Status</th>
+              <th>Date</th>
+              <th>View Offer</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{ accepted_order.created_at | to_date | l: 'short' }}</td>
+              <td>Accepted</td>
+              <td>{{ accepted_order.confirmed_at | to_date | l: 'short' }}</td>
+              <td><a href="{{ accepted_order.payment_documents[0].file_url }}" target="_blank">{{ accepted_order.payment_documents[0].file_name }}</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
       {% if current_status != 'in progress' %}
         <p>Total Paid {{ order.total_amount | pricify: order.currency }}</p>
