--- a/lib/tasks/uot/templates/dashboard_company_transactables_sme_listing.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_sme_listing.liquid
@@ -32,7 +32,7 @@
     {% endunless %}
 
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-8">
         <dl class="properties">
 
           <dt>Contact</dt>
@@ -65,7 +65,7 @@
         <h4>Description</h4>
         <p>{{ transactable.description }}</p>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         {% include 'dashboard/company/transactables/sme_actions.html', order: orders.last %}
       </div>
     </div>
@@ -75,51 +75,53 @@
     {% if orders != empty %}
       {% assign order = orders.last %}
       <h3>Offer</h3>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Offer Made:</th>
-            <th>Offer Status:</th>
-            {% if order.unconfirmed? %}
-              <th>Offer Action:</th>
-            {% else %}
-              <th>Date</th>
-            {% endif %}
-            {% if order.confirmed? %}
-              <th>View offer</th>
-            {% endif %}
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>{{ order.created_at | to_date | l: 'short' }}</td>
-            <td>
-              {% if order.archived_at != blank %}
-                Archived
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Offer Made:</th>
+              <th>Offer Status:</th>
+              {% if order.unconfirmed? %}
+                <th>Offer Action:</th>
               {% else %}
-                {{ 'reservations.states.' | append: order.state | t }}
+                <th>Date</th>
               {% endif %}
-            </td>
-            {% if order.unconfirmed? %}
+              {% if order.confirmed? %}
+                <th>View offer</th>
+              {% endif %}
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{ order.created_at | to_date | l: 'short' }}</td>
               <td>
-                {% if order.unconfirmed? %}
-                  <a class="btn btn-info" href="{{ 'edit_dashboard_order_path' | generate_url: order.id }}">{{ 'general.edit' | t }}</a>
-                {% endif %}
-                {% if order.unconfirmed?  %}
-                  <a class="btn btn-danger" href="{{ 'enquirer_cancel_dashboard_order_path' | generate_url: order.id }}" data-method="post" data-confirm="Are you sure you want to cancel?">{{ 'general.cancel' | t }}</a>
+                {% if order.archived_at != blank %}
+                  Archived
+                {% else %}
+                  {{ 'reservations.states.' | append: order.state | t }}
                 {% endif %}
               </td>
-            {% elsif order.confirmed? %}
-              <td>{{ order.confirmed_at | l: 'long' }}</td>
-            {% else %}
-              <td>{{ order.archived_at | l: 'long' }}</td>
-            {% endif %}
-            {% if order.confirmed? %}
-              <td><a href="{{ order.payment_documents[0].file_url }}" target="_blank">{{  order.payment_documents[0].file_name }}</a></td>
-            {% endif %}
-          </tr>
-        </tbody>
-      </table>
+              {% if order.unconfirmed? %}
+                <td>
+                  {% if order.unconfirmed? %}
+                    <a class="btn btn-info" href="{{ 'edit_dashboard_order_path' | generate_url: order.id }}">{{ 'general.edit' | t }}</a>
+                  {% endif %}
+                  {% if order.unconfirmed?  %}
+                    <a class="btn btn-danger" href="{{ 'enquirer_cancel_dashboard_order_path' | generate_url: order.id }}" data-method="post" data-confirm="Are you sure you want to cancel?">{{ 'general.cancel' | t }}</a>
+                  {% endif %}
+                </td>
+              {% elsif order.confirmed? %}
+                <td>{{ order.confirmed_at | l: 'long' }}</td>
+              {% else %}
+                <td>{{ order.archived_at | l: 'long' }}</td>
+              {% endif %}
+              {% if order.confirmed? %}
+                <td><a href="{{ order.payment_documents[0].file_url }}" target="_blank">{{  order.payment_documents[0].file_name }}</a></td>
+              {% endif %}
+            </tr>
+          </tbody>
+        </table>
+      </div>
     {% endif %}
     {% assign order = transactable.last_accepted_order %}
     {% if order.confirmed? %}
