NM-5455 Hide unused labels on listing / show. Other fixes

--- a/app/views/dashboard/order_items/index.html.liquid
+++ b/app/views/dashboard/order_items/index.html.liquid
@@ -13,7 +13,7 @@
   {% endif %}
 {% endcontent_for %}
 
-<div class="sort-filter-a">
+<div class="sort-filter-a sort-filter-project-filter">
   <div class="form-group">
     <label for="select-project" class="control-label">Select Project:</label>
     <select id="select-project" data-expenses-overview>
