--- a/app/frontend/stylesheets/dashboard.scss
+++ b/app/frontend/stylesheets/dashboard.scss
@@ -21,7 +21,7 @@
 @import "components/tags";
 @import "sections/schedule";
 
-$font-stack: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-stack: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $color-blue: #5dbded;
 $color-light-blue: #acdef7;
@@ -59,4 +59,3 @@ $dark_text_color: #3B3B3B;
 
 @import "vendor/jstree";
 @import "vendor/jstree_themes/apple/style";
-
