--- a/app/frontend/stylesheets/new_ui/modules/_availability.scss
+++ b/app/frontend/stylesheets/new_ui/modules/_availability.scss
@@ -6,7 +6,7 @@
             font-style: italic;
             display: block;
             content: attr(data-junction-label);
-            margin-left: ceil(($grid-gutter-width / 2));
+            margin-left: ceil($grid-gutter-width / 2);
             margin-top: 20px;
             margin-bottom: 10px;
         }
