--- a/app/views/dashboard/company/payments/show.html.haml
+++ b/app/views/dashboard/company/payments/show.html.haml
@@ -8,7 +8,7 @@
 
 .panel
   .panel-body
-    %table.payment-summary
+    %table.table.payment-summary
       %tbody
         %tr
           %th= t('dashboard.payments.total')
