NM-5458 Homepage video

--- a/lib/tasks/uot/templates/home_index.liquid
+++ b/lib/tasks/uot/templates/home_index.liquid
@@ -76,6 +76,12 @@
 
         </section>
 
+        <section class="video-cta">
+          <div class="video-container">
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/VqnilLKrzUo" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </section>
+
         <section class="reasons-cta">
             <h2>Why should SMEs join UoT?</h2>
             <h3>Join a Global Community of Subject Matter Experts</h3>
