NM-5444 approved emails

--- a/app/views/dashboard/user_messages/_user_message_for_show.html.haml
+++ b/app/views/dashboard/user_messages/_user_message_for_show.html.haml
@@ -25,4 +25,4 @@
   %footer
     %span.attachment
       - user_message.attachments.each do |attachment|
-        = link_to attachment.file.file_name, attachment.file.url, download: attachment.file.file_name
+        = link_to attachment[:file], attachment.file.url, download: attachment[:file]
