--- a/lib/tasks/uot/templates/mailers/offer_mailer/notify_guest_of_confirmation.html.liquid
+++ b/lib/tasks/uot/templates/mailers/offer_mailer/notify_guest_of_confirmation.html.liquid
@@ -2,4 +2,4 @@
 
 <p>You offer has been accepted by {{ transactable.creator.name }} and you will be able to get started working on {{ transactable.name }} per the agreed terms of your offer.</p>
 
-<p>We're happy that our community has provided you with this opportunity and wish you nothing but the best on the work and collaboration ahead of you. The project can now be tracked under the <a href="{{ platform_context.host | append: listing.in_progress_index_url }}">My Projects > Projects in Progress</a> in your user dashboard.</p>
+<p>We're happy you are part of our community and expect to hear great things about your collaboration. The project can now be tracked under the <a href="{{ platform_context.host | append: listing.in_progress_index_url }}">My Projects > Projects in Progress</a> in your user dashboard.</p>
