--- a/lib/tasks/uot/templates/mailers/transactable_mailer/notify_enquirer_of_completion.html.liquid
+++ b/lib/tasks/uot/templates/mailers/transactable_mailer/notify_enquirer_of_completion.html.liquid
@@ -2,5 +2,5 @@
 
 <p>{{ lister.name }} has marked {{ transactable.name }} as complete. This means the project is over and it will be archived in our system.</p>
 
-<p>Thank you for a job well done.</p>
+<p>Great job! #UoTSMEs are the <b>World’s Best Subject Matter Experts. On Demand.</b></p>
 
