--- a/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_client_actions.liquid
@@ -23,10 +23,10 @@
   {% if current_status == 'in progress' %}
     <hr/>
 
-    {% if accepted_order.user_messages.size == 0 %}
-      <li><a class="btn btn-info" data-modal="true" href="{{ 'new_reservation_user_message_path' | generate_url: accepted_order.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a></li>
+    {% if accepted_order.transactable_user_messages.size == 0 %}
+      <li><a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id, skip: true }}">{{ 'dashboard.user_reservations.send_message' | t}}</a></li>
     {% else %}
-      <li><a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: accepted_order.user_messages.first.id }}">{{ 'dashboard.user_reservations.send_message' | t}}</a></li>
+      <li><a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: accepted_order.transactable_user_messages.first.id }}">{{ 'dashboard.user_reservations.send_message' | t}}</a></li>
     {% endif %}
 
     {{ accepted_order.user.click_to_call_button }}
