--- a/lib/tasks/uot/templates/dashboard_company_transactables_sme_actions.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_sme_actions.liquid
@@ -7,12 +7,8 @@
   {% endif %}
 
   <li>
-    {% if order != blank and order.user_messages.size > 0 %}
-      <a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: order.user_messages.first.id }}">{{ 'dashboard.order_items.send_message' | t}}</a>
-    {% elsif order != blank %}
-      <a class="btn btn-info" data-modal="true" href="{{ 'new_reservation_user_message_path' | generate_url: order.id, skip: true }}">{{ 'dashboard.order_items.send_message' | t}}</a>
-    {% elsif transactable.user_messages.size > 0 %}
-      <a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: transactable.user_messages.first.id, skip: true }}">{{ 'dashboard.order_items.send_message' | t}}</a>
+    {% if order != blank and order.transactable_user_messages.size > 0 %}
+      <a class="btn btn-info" data-modal="true" href="{{ 'dashboard_user_message_path' | generate_url: order.transactable_user_messages.first.id }}">{{ 'dashboard.order_items.send_message' | t}}</a>
     {% else %}
       <a class="btn btn-info" data-modal="true" href="{{ 'new_listing_user_message_path' | generate_url: transactable.id, skip: true }}">{{ 'dashboard.order_items.send_message' | t}}</a>
     {% endif %}
