--- a/lib/tasks/uot/templates/mailers/order_item_mailer/notify_enquirer_rejected_order_item.html.liquid
+++ b/lib/tasks/uot/templates/mailers/order_item_mailer/notify_enquirer_rejected_order_item.html.liquid
@@ -2,5 +2,11 @@
 
 <p>{{ lister.name }} has rejected the latest time and expense submission. Payment for the latest submission of time and expenses will be not processed.</p>
 
+<p>Rejection could be based on many factors such as: expense budget, agreed upon special terms, poor documentation, etc.</p>
+
+{% if order_item.rejection_reason != blank %}
+  <p>Client said: "{{ order_item.rejection_reason }}"</p>
+{% endif %}
+
 <p>Please review your information and re-submit time and expenses per your agreed terms. Feel free to <a href="{{ lister.use_message_path }}">reach out to {{ lister.name }}</a> for more details.</p>
 
