--- a/lib/tasks/uot/templates/mailers/post_action_mailer/enquirer_onboarded.html.liquid
+++ b/lib/tasks/uot/templates/mailers/post_action_mailer/enquirer_onboarded.html.liquid
@@ -1,14 +1,14 @@
 <p>Hello {{ user.first_name }},</p>
 
-<p>You have successfully completed your expert profile. Now you're ready for next steps! Here are things to expect:</p>
+<p>You have successfully completed your expert profile. Now you're ready for next steps! Here are things to do:</p>
 
-<p>#1 Clients will want to connect with you<br />
-UoT will allow Clients to find you. Work on projects that are best fit with your skills.</p>
+<p>#1 Blog on your topic!<br />
+Clients are seeking experts with your expertise so be visible. The more you write in your blog, the more content we have to promote you and your knowledge.</p>
 
-<p>#2 Connect with People<br />
-Our community allows you to send text communications or even call experts. Find out if they are the right fit for your project.</p>
+<p>#2 Connect with Clients<br />
+Our community allows clients to directly start a conversation with you using the UoT InMail or Click to Talk. Conversations led to projects.</p>
 
-<p>#3 Be invited to a Project<br />
-Work on interesting projects!</p>
+<p>#3 Make sure your Linkedin Profile is up-to-date<br />
+Clients will have easy access to your Linkedin profile so make read the materials we provide on mistakes to avoid to ensure a Pitch Perfect Profile.</p>
 
-<p>Make it a great day!</p>
+<p><b>Access the World’s Best Subject Matter Experts. On Demand.</b></p>
