--- a/lib/tasks/uot/templates/mailers/post_action_mailer/host_sign_up_welcome.html.liquid
+++ b/lib/tasks/uot/templates/mailers/post_action_mailer/host_sign_up_welcome.html.liquid
@@ -1,8 +1,15 @@
 <h2>Hello, {{ user.first_name }}!</h2>
 
-<p>Thanks for registering! We're thrilled you've joined the UoT community.</p>
+<p>Thanks for registering! Welcome to the Upside of Talent Marketplace, a <b>Global Marketplace for the Right Expertise at the Right Time.</b> </p>
 
-<p>We appreciate the trust you've placed in us and we want to support you to complete your projects successfully.</p>
+<p>We appreciate the trust you've placed in us to:
+  <ul>
+    <li>Build your team.</li>
+    <li>Launch your projects.</li>
+    <li>Achieve your goals.</li>
+    <li>Grow to the next level.</li>
+  </ul>
+</p>
 
-<p>We're always here to help. If you would like help from our support team, just email us! Send us a message at <a href="mailto:{{ platform_context.support_email }}">{{ platform_context.support_email }}</a> and we'll take care of you right away.</p>
-<p>Make it a great day!</p>
+<p>We're always here to help.  If you would like help from our support team, just email us!  Send us a message at <a href="mailto:{{ platform_context.support_email }}">{{ platform_context.support_email }}</a> and we'll take care of you right away.</p>
+<p><b>Access the World’s Best Subject Matter Experts. On Demand.</b></p>
