--- a/lib/tasks/uot/templates/mailers/post_action_mailer/lister_onboarded.html.liquid
+++ b/lib/tasks/uot/templates/mailers/post_action_mailer/lister_onboarded.html.liquid
@@ -1,17 +1,17 @@
 <p>Hello {{ user.first_name}},
 
-<p>You have successfully completed your profile. Now you're ready for next steps!  Here are three ways to get more done:</p>
+<p>You have successfully completed your profile. Now you're ready for next steps! Here are three ways to get more done:</p>
 
 <p>#1 Search for Experts<br />
-UoT will allow you to find Experts from a wide range of industries and experience. Find the best people for your project.
+UoT will allow you to find Experts from a wide range of industries and experience. Find the best SMEs for your project.
 </p>
 
 <p>#2 Connect with People<br />
-Our community allows you to send text communications or even call experts. Find out if they are the right fit for your project.
+Our community allows you to send UoT InMail communications or even call experts from within the UoT marketplace. Find out if they are the right fit for your project.
 </p>
 
 <p>#3 Invite Experts to a Project<br />
-Now you can simply add a project and invite experts that may be interested to work with you. Begin getting offers and start the journey towards a successful project.
+Once you fit a match, you work together to develop the scope for the project. The SME responds with a quote, you accept, and the project begins.
 </p>
 
-<p>Make it a great day!</p>
+<p><b>Access the World’s Best Subject Matter Experts. On Demand.</b></p>
