--- a/app/views/listings/action_types/purchase_action.html.haml
+++ b/app/views/listings/action_types/purchase_action.html.haml
@@ -25,7 +25,7 @@
             :'data-behavior' => 'reviewBooking', :'data-listing-id' => @listing.id,
             :'data-registration-url' => registration_url, :'data-store-reservation-request-url' => store_order_listing_orders_url(@listing),
             :'data-user-signed-in' => user_signed_in?, :'data-secured' => (not secure_links?), :'data-force-modal' => false}
-          - form_options = { :url => listing_orders_path(@listing), html: { id: "reservation_request_form_#{@listing.id}" } }
+          - form_options = { :url => listing_orders_path(@listing), html: { id: "reservation_request_form_#{@listing.id}", class: 'triggers-show-modal' } }
           - if @action_type.action_rfq?
             - book_hash[:class] += (@action_type.is_free_booking? ? 'hidden' : 'span6')
             - rfq_class = (@action_type.is_free_booking? ? 'btn btn-green btn-large' :  'btn btn-gray-light btn-large offer-button span6' )
