--- a/lib/tasks/uot/templates/mailers/order_item_mailer/notify_lister_created_order_item.html.liquid
+++ b/lib/tasks/uot/templates/mailers/order_item_mailer/notify_lister_created_order_item.html.liquid
@@ -1,5 +1,5 @@
 <h2>Hello, {{ lister.name }}</h2>
 
 <p>{{ enquirer.name }} has been working on your project. They have recently submitted time and expense items for your approval.</p>
-
-<p>Click <a href="{{ 'dashboard_order_order_items_path' | generate_url: @order_item.order, transactable_id: @order_item.order.transactable.id }}">here</a> to review time and expense details.</p>
+{% assign order_item_url = 'dashboard_order_order_items_path' | generate_url: @order_item.order.id, transactable_id: @order_item.order.transactable.id %}
+<p>Click <a href="{{ platform_context.host | append: order_item_url }}">here</a> to review time and expense details.</p>
