NM-5409 Field lacks visual validation

--- a/app/views/dynamic_themes/application.css.erb
+++ b/app/views/dynamic_themes/application.css.erb
@@ -783,3 +783,5 @@ body.user-blog .container-fluid.header-container span.blog-header {
 .user-blog .blog-container .blog-post-detail .links .next-blog-post {
     color: <%= theme_white %>
 }
+
+.has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline, .has-error.radio label, .has-error.checkbox label, .has-error.radio-inline label, .has-error.checkbox-inline label { color: #e55d51; }
