NM-5433 Lack of validation style color in payments

--- a/app/views/dynamic_themes/new_ui.css.erb
+++ b/app/views/dynamic_themes/new_ui.css.erb
@@ -101,7 +101,7 @@ output { color: #555; }
 .has-warning .form-control:focus { border-color: #66512c; }
 .has-warning .input-group-addon { color: #8a6d3b; border-color: #8a6d3b; background-color: #fcf8e3; }
 .has-warning .form-control-feedback { color: #8a6d3b; }
-.has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline, .has-error.radio label, .has-error.checkbox label, .has-error.radio-inline label, .has-error.checkbox-inline label { color: #e55d51; }
+.has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline, .has-error.radio label, .has-error.checkbox label, .has-error.radio-inline label, .has-error.checkbox-inline label, .has-error .error-block { color: #e55d51; }
 .has-error .form-control { border-color: #e55d51; }
 .has-error .form-control:focus { border-color: #de3425; }
 .has-error .input-group-addon { color: #e55d51; border-color: #e55d51; background-color: #f9d9d6; }
