--- a/app/views/dashboard/order_items/_order_item.html.liquid
+++ b/app/views/dashboard/order_items/_order_item.html.liquid
@@ -3,10 +3,10 @@
     <h4>Tracked Items &amp; Expenses entry</h4>
 
     <div class="options">
-      {% if item.payment_state == 'unpaid' and  item.order.user.id == current_user.id %}
+      {% if item.payment_state == 'unpaid' %}
         <a href="{{ 'edit_dashboard_order_order_item_path' | generate_url: order_id: order.id, id: item.id }}" class="btn btn-primary btn-xs">Edit</a>
       {% else %}
-        <a href="{{ 'dashboard_order_order_item_path' | generate_url: order_id: order.id, id: item.id }}" class="btn btn-primary btn-xs">View</a>
+        <a href="{{ 'dashboard_order_order_item_path' | generate_url: order_id: order.id, id: item.id }}" class="btn btn-primary btn-xs">View2</a>
       {% endif %}
     </div>
 
